<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_novels"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_novels" />-->
        <item
            android:id="@+id/nav_shorts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_shorts" />
        <item
            android:id="@+id/nav_horror"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_horror" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_save" />
    </group>

    <item android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
