<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_shorts">
<!--    <fragment-->
<!--        android:id="@+id/nav_novels"-->
<!--        android:name="com.kbase.katha.fragments.NovelsFragment"-->
<!--        android:label="@string/menu_novels"-->
<!--        tools:layout="@layout/fragment_novels" />-->

    <fragment
        android:id="@+id/nav_shorts"
        android:name="com.kbase.katha.fragments.ShortsFragment"
        android:label="@string/menu_shorts"
        tools:layout="@layout/fragment_shorts" />

    <fragment
        android:id="@+id/nav_horror"
        android:name="com.kbase.katha.fragments.HorrorFragment"
        android:label="@string/menu_horror"
        tools:layout="@layout/fragment_horror" />

    <fragment
        android:id="@+id/nav_save"
        android:name="com.kbase.katha.fragments.SaveFragment"
        android:label="@string/menu_save"
        tools:layout="@layout/fragment_save" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.kbase.katha.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.kbase.katha.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>